<resources>
    <string name="app_name">Tourify</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_explore">Explore</string>
    <string name="title_you">You</string>
    <string name="destination_image">Destination</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
</resources>