<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tourify.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.tourify.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.tourify.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore">
        <action
            android:id="@+id/action_navigation_explore_to_navigation_explore_results"
            app:destination="@id/navigation_explore_results" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore_results"
        android:name="com.tourify.ui.explore.ExploreResultsFragment"
        android:label="Explore Results"
        tools:layout="@layout/fragment_explore_results" />

    <fragment
        android:id="@+id/navigation_you"
        android:name="com.tourify.ui.user.UserFragment"
        android:label="@string/title_you"
        tools:layout="@layout/fragment_user" />
</navigation>