<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:text="@string/question"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/option_button_1"
        android:background="@drawable/button_background"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/option_1"
        app:layout_constraintTop_toBottomOf="@id/question_text_view"
        app:layout_constraintStart_toStartOf="@id/question_text_view"
        app:layout_constraintEnd_toStartOf="@id/option_button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"/>

    <Button
        android:id="@+id/option_button_2"
        android:background="@drawable/button_background"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/option_2"
        app:layout_constraintTop_toBottomOf="@id/question_text_view"
        app:layout_constraintStart_toEndOf="@id/option_button_1"
        app:layout_constraintEnd_toStartOf="@id/option_button_3"
        app:layout_constraintHorizontal_weight="1"/>

    <Button
        android:id="@+id/option_button_3"
        android:background="@drawable/button_background"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/option_3"
        app:layout_constraintTop_toBottomOf="@id/question_text_view"
        app:layout_constraintStart_toEndOf="@id/option_button_2"
        app:layout_constraintEnd_toEndOf="@id/question_text_view"
        app:layout_constraintHorizontal_weight="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>
